tests/spec/fail/set_add_non_string.aja
import (
    "modules/set"
)

s = set.new()
set.add(s, 1)
